# lab4

./: Array.cpp  Array.h  CMakeLists.txt  Figure.cpp  Figure.h  Hexagon.cpp  Hexagon.h  Pentagon.cpp  Pentagon.h  Point.cpp  Point.h  Rhombus.cpp  Rhombus.h  main.cpp  tests.cc
